2007-05-17  Rodrigo Moya <rodrigo@gnome-db.org>

	* gnome-settings-screensaver.c: use correct parent for
	GnomeSettingsModuleScreensaverClass.

2007-05-13  Jens Granseuer  <jensgr@gmx.net>

	* gnome-settings-multimedia-keys.c: (do_eject_action): use "eject -T" as
	the default eject command (closes bug #386297)

2007-05-09  Rodrigo Moya <rodrigo@gnome-db.org>

	* gnome-settings-screensaver.c: converted to a loadable module.

	* gnome-settings-screensaver.h: removed unneeded file.

2007-05-09  Rodrigo Moya <rodrigo@gnome-db.org>

	* gnome-settings-background.c (gnome_settings_module_background_init,
	gnome_settings_module_background_start): no need to keep the GConfClient
	around, it is already stored in the GnomeSettingsModule class.

2007-05-09  Rodrigo Moya <rodrigo@gnome-db.org>

	* gnome-settings-background.c: removed G_BEGIN|END_DECLS.
	(gnome_settings_module_background_get_type): register with correct type.
	(gnome_settings_module_background_initialize): store the GConfClient we get.
	(gnome_settings_module_background_start): use the stored GConfClient.

	* gnome-settings-background.h: removed unneeded file.

	* gnome-settins-clipboard.c: new file to implement the clipboard manager as
	a loadable module. Replaces clipboard-manager.[ch].

	* gnome-settings-daemon.c: removed old clipboard manager and use the new
	module-based one.

	* Makefile.am: added/removed sources.

2007-05-08  Rodrigo Moya <rodrigo@gnome-db.org>

	* gnome-settings-background.c: changed to use the new GnomeSettingsModule
	class for loadable modules.

	* gnome-settings-daemon.c (initialize_modules, start_modules,
	stop_modules): new functions to call modules's methods.
	(gnome_settings_daemon_init): get all module types and create objects
	from each of them.
	(gnome_settings_daemon_new): added code to call loadable modules's
	methods where appropriate.

2007-04-24  Rodrigo Moya <rodrigo@gnome-db.org>

	* gnome-settings-module.h: added missing prototype.
